# GRPCAnalysor

./: .gitignore  .gitmodules  BuildMe.sh  CMakeLists.txt  INSTALL.txt  README.md  README.txt
Config/: CMakeLists.txt
Config/include/: AsicInfo.h  ConfigInfo.h  DifInfo.h  Histogrammer.h
Config/source/: AsicInfo.cpp  ConfigInfo.cpp  DifInfo.cpp  Histogrammer.cpp
Database/: CMakeLists.txt
Database/include/: ILCConfDB.h  occiControl.h
Database/include/configObjects/: Asic.h  ConfigObject.h  Configuration.h  DBField.h  Dcc.h  Dif.h  DifConfiguration.h  LdaConfiguration.h  Setup.h  State.h  Version.h
Database/include/daq/: Daq.h  RunInfo.h
Database/include/db/: DBConnection.h  DBInit.h  IntVal.h
Database/source/Exceptions/: Exception.cc
Database/source/configObjects/: Configuration.cc  DBField.cc  Dcc.cc  DccConfiguration.cc  State.cc  Version.cc
Database/source/daq/: Daq.cc
Database/source/db/: DBConnection.cc  DBInit.cc  DBValue.cc
Elog/: elog  (+5 more)
Marlino/: CMakeLists.txt
Marlino/include/: Global.h  IParser.h  LCTokenizer.h  LogicalExpressions.h  Processor.h  ProcessorLoader.h  ProcessorParameter.h  StringParameters.h
Marlino/source/: Global.cc  LogicalExpressions.cc  Marlino.cc  Processor.cpp  ProcessorLoader.cc  ProcessorMgr.cc  XMLParser.cc
Processors/: CMakeLists.txt
Processors/Analysis2/include/: HitsInPlan.h  TestedPlan.h  TrackFitter.h
Processors/Analysis2/source/: HitsInPlan.cc
Processors/IJKfiller/: CMakeLists.txt
Processors/IJKfiller/include/: IJKfiller.h  Mapping.h
Processors/IJKfiller/source/: IJKfiller.cc
Processors/LCIOOutputProcessor/include/: LCIOOutputProcessor.h
Processors/Progress/: CMakeLists.txt
Processors/Progress/include/: Progress.h
Processors/Progress/source/: Progress.cc
Processors/SpillStudy/include/: SpillStudy.h
Processors/SpillStudy/source/: SpillStudy.cc
Processors/Streamout/: CMakeLists.txt
Processors/Streamout/include/: DIFUnpacker.h  Streamout.h
Processors/Streamout/source/: DIFSlowControl.cc  Streamout.cc
Processors/Streamout2/include/: BufferNavigator.h  DIFSlowControl.h  LMGenericObject.h
Processors/Streamout2/source/: BufferNavigator.cc  DIFUnpacker.cc
Processors/Trigger/include/: Trigger.h
Processors/Trigger/source/: Trigger.cc
Processors/Trivent/: CMakeLists.txt
Processors/Trivent/include/: Trivent.h
Processors/Trivent/source/: Trivent.cc
Processors/Trivent2/: CMakeLists.txt
Processors/Trivent2/include/: HistoPlane.h  SpillStudy.h  TriventProcessor.h
Processors/Trivent2/source/: HistoPlane.cc  TriventProcessor.cc
Processors/TriventBIF/: CMakeLists.txt
Processors/TriventBIF/include/: TriventBIF.h
Processors/TriventBIF/source/: TriventBIF.cc
Processors/TriventTriggered/: CMakeLists.txt
Processors/TriventTriggered/include/: TriventTriggered.h
Processors/TriventTriggered/source/: TriventTriggered.cc
Processors/XYZfiller/: CMakeLists.txt
Processors/XYZfiller/include/: XYZfiller.h
Processors/XYZfiller/source/: XYZfiller.cc
Reader/: CMakeLists.txt
Reader/include/: Reader.h  ReaderFactory.h  TXTReader.h  XMLReader.h  XMLReaderConfig.h  XMLReaderElog.h
Reader/source/: ReaderFactory.cc  TXTReader.cc  XMLReader.cc  XMLReaderConfig.cc  XMLReaderElog.cc
Simulation/: CMakeLists.txt  Simulation.cc
lcio/: CMakeLists.txt  LCIOConfig.cmake  LCIOConfigVersion.cmake
lcio/include/: lcio.h
lcio/include/EVENT/: LCIO.h
lcio/lib/: liblcio.so.2.11  libsio.so.2.11  libsio.so.2.11.0
lcio/src/IMPL/: LCEventImpl.cc
sio/: CMakeLists.txt
sio/src/: SIO_blockManager.cc  SIO_record.cc
src/Converter/: CMakeLists.txt
src/Converter/include/: ConstructConverters.h  Converter.h  Mapping.h  PadConverter.h  StripConverter.h  StripDownConverter.h  StripUpConverter.h  Threshold.h
src/Converter/source/: ConstructConverters.cc  Converter.cc  PadConverter.cc  StripConverter.cc  StripDownConverter.cc  StripUpConverter.cc  Threshold.cc
src/Database/: CMakeLists.txt
src/Database/include/: occiData.h
src/Elog/: CMakeLists.txt
src/Elog/include/: ElogInformations.h
src/Elog/source/: ElogFiller.cc  ElogFillerNewDAQ.cc
src/Geometry/: CMakeLists.txt
src/Geometry/include/: Dif.h  Geometry.h  Plate.h
src/Geometry/source/: Dif.cc  Geometry.cc
src/HistoGraphs/: CMakeLists.txt
src/HistoGraphs/include/: HistoPlane.h
src/HistoGraphs/source/: HistoPlane.cc
src/Marlino/: CMakeLists.txt
src/Marlino/include/: EventModifier.h  Global.h  ProcessorLoader.h  ProcessorMgr.h  XMLParser.h
src/Marlino/source/: Global.cc  LogicalExpressions.cc  Marlino.cc  ProcessorLoader.cc  ProcessorMgr.cc  ProcessorParameter.cc  StringParameters.cc  XMLParser.cc
src/Processors/: CMakeLists.txt
src/Processors/AEGIS/: CMakeLists.txt
src/Processors/Analysis2/: CMakeLists.txt
src/Processors/BifHelper/: CMakeLists.txt
src/Processors/BifModifier/: CMakeLists.txt
src/Processors/Clusterisation/: CMakeLists.txt
src/Processors/IJKfiller/: CMakeLists.txt  Makefile  cmake_install.cmake
src/Processors/LCIOOutputProcessor/: CMakeLists.txt  Makefile  cmake_install.cmake
src/Processors/Progress/: CMakeLists.txt  Makefile  cmake_install.cmake
src/Processors/SpillStudy/: CMakeLists.txt
src/Processors/Streamout/: CMakeLists.txt  Makefile  cmake_install.cmake
src/Processors/Streamout2/: CMakeLists.txt
src/Processors/TimeSelecter/: CMakeLists.txt
src/Processors/Trigger/: CMakeLists.txt  Makefile  cmake_install.cmake
src/Processors/Trivent/: CMakeLists.txt  Makefile  cmake_install.cmake
src/Processors/TriventBIF/: CMakeLists.txt
src/Processors/TriventTriggered/: CMakeLists.txt  Makefile  cmake_install.cmake
src/Processors/XYZfiller/: CMakeLists.txt  Makefile  cmake_install.cmake
src/Reader/: CMakeLists.txt
src/Reader/include/: Reader.h  ReaderFactory.h  XMLReader.h  XMLReaderConfig.h  XMLReaderElog.h
src/Reader/source/: XMLReader.cc  XMLReaderConfig.cc  XMLReaderElog.cc
src/jsoncpp/: CMakeLists.txt
src/sio/: CMakeLists.txt
src/streamlog/: CMakeLists.txt  CTestConfig.cmake
src/tdrstyle/: CMakeLists.txt
tdrstyle/: CMakeLists.txt
tdrstyle/source/: tdrStyle.cpp
(+184 files in other folders)
