########################################################
# cmake file for building Marlino
# @author Lagarde François, IPNL
cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
########################################################
# project name
project(GRPC_Analysor)
# project version
SET( GRPC_Analysor_VERSION_MAJOR 2 )
SET( GRPC_Analysor_VERSION_MINOR 7 )
SET( GRPC_Analysor_VERSION_PATCH 1 )
include(CheckIncludeFiles)
include(CheckCXXCompilerFlag)

CHECK_CXX_COMPILER_FLAG("-std=c++14" COMPILER_SUPPORTS_CXX14)
if(COMPILER_SUPPORTS_CXX14)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
else()
  CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX0X)
  if(COMPILER_SUPPORTS_CXX11)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
  else()
    if(COMPILER_SUPPORTS_CXX0X)
      CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
    else()
      message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please update your *$!%+£ C++ compiler.")
    endif() 
  endif()
endif()

set(PROJECT_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/build/include/")
set(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/lib/")
set(MARLINO_LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/libMarlino/")
SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/")
include_directories(${CMAKE_SOURCE_DIR}/build/include/)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb3 -Wall -ansi -fno-strict-aliasing -lpthread -ldl -lm -fPIC" )
list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/ROOT/)
list( APPEND CMAKE_MODULE_PATH $ENV{ROOTSYS}/etc/cmake/)
find_package(ROOT REQUIRED)
include_directories(${ROOT_INCLUDE_DIR})
configure_file ("${CMAKE_SOURCE_DIR}/Utils/Version.h.in" "${CMAKE_SOURCE_DIR}/build/include/Version.h")

find_library(LOCCI_SUPPORT NAMES occi)
if(LOCCI_SUPPORT)
  message("-- LOCCI found")
  SET(HaveOCCI 1)
  SET(GCC_COVERAGE_LINK_FLAGS "-locci -lclntsh")
  add_definitions(-DOCCI_SUPPORT)
else()
  message("-- No LOCCI support")
  SET(HaveOCCI 0)
endif()

ADD_SUBDIRECTORY( HistoGraphs )
if(HaveOCCI)
ADD_SUBDIRECTORY( Database )
endif()
ADD_SUBDIRECTORY( sio )
ADD_SUBDIRECTORY( Config )
ADD_SUBDIRECTORY( lcio )
ADD_SUBDIRECTORY( Geometry )
ADD_SUBDIRECTORY( Marlino )
ADD_SUBDIRECTORY( OutFileRoot )
ADD_SUBDIRECTORY( Processors )
ADD_SUBDIRECTORY( Reader )
ADD_SUBDIRECTORY( tdrstyle )
ADD_SUBDIRECTORY( Utils )
ADD_SUBDIRECTORY( tinyxml )
#ADD_SUBDIRECTORY( Simulation )
#ADD_SUBDIRECTORY( Elog )
#ADD_SUBDIRECTORY( Plot )
