include_directories("${CMAKE_SOURCE_DIR}/build/include")
include_directories(include)
FILE (GLOB_RECURSE Trivent_SRC_FILES ./source/*)
ADD_LIBRARY( Trivent SHARED ${Trivent_SRC_FILES} )
TARGET_LINK_LIBRARIES( Trivent Marlin )
INSTALL( TARGETS Trivent LIBRARY DESTINATION ${MARLINO_LIBRARY_OUTPUT_PATH})
