# ----- Simulation executable ----------------------------------------------------
CHECK_CXX_COMPILER_FLAG("-std=c++14" COMPILER_SUPPORTS_CXX14)
if(COMPILER_SUPPORTS_CXX14)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
else()
  CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX0X)
  if(COMPILER_SUPPORTS_CXX11)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
  else()
    if(COMPILER_SUPPORTS_CXX0X)
      CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
    else()
      message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please update your *$!%+£ C++ compiler.")
    endif() 
  endif()
endif()
include_directories(include ${PROJECT_INCLUDE_DIR})
file(COPY ./include/ DESTINATION ${PROJECT_INCLUDE_DIR})
FILE (GLOB_RECURSE ELOGINFOS_SRC_FILES ./source/*)
ADD_LIBRARY( ElogInformations STATIC ${ELOGINFOS_SRC_FILES} )
INSTALL( TARGETS ElogInformations LIBRARY DESTINATION ${LIBRARY_OUTPUT_PATH} ARCHIVE DESTINATION ${LIBRARY_OUTPUT_PATH})
ADD_EXECUTABLE( ElogFiller ./source/ElogFillerNewDAQ.cc )
TARGET_LINK_LIBRARIES( ElogFiller tinyxml)
INSTALL( TARGETS ElogFiller DESTINATION ${EXECUTABLE_OUTPUT_PATH} )  
