SET_OPTION(CXX_STANDARD 17) # C++14...
SET_OPTION(CXX_STANDARD_REQUIRED ON) #...is required...
SET_OPTION(CXX_EXTENSIONS ON) #...without compiler extensions like gnu++11
include_directories(include)
file(COPY ./include/ DESTINATION ${PROJECT_INCLUDE_DIR})
FILE (GLOB_RECURSE GEOMETRY_SRC_FILES ./source/*)
ADD_LIBRARY( Geometry STATIC ${GEOMETRY_SRC_FILES} )
TARGET_LINK_LIBRARIES( Geometry  )
INSTALL( TARGETS Geometry LIBRARY DESTINATION ${LIBRARY_OUTPUT_PATH} ARCHIVE DESTINATION ${LIBRARY_OUTPUT_PATH})
