CHECK_CXX_COMPILER_FLAG("-std=c++14" COMPILER_SUPPORTS_CXX14)
if(COMPILER_SUPPORTS_CXX14)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
else()
  CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX0X)
  if(COMPILER_SUPPORTS_CXX11)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
  else()
    if(COMPILER_SUPPORTS_CXX0X)
      CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
    else()
      message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please update your *$!%+£ C++ compiler.")
    endif() 
  endif()
endif()

# add the binary tree to the search path for include files
include_directories("${PROJECT_INCLUDE_DIR}")
add_subdirectory(Streamout)
add_subdirectory(LCIOOutputProcessor)
add_subdirectory(Progress)
#add_subdirectory(TriventBIF)
add_subdirectory(TriventTriggered)
add_subdirectory(Trivent)
#add_subdirectory(SpillStudy)
add_subdirectory(IJKfiller)
add_subdirectory(XYZfiller)
add_subdirectory(Trigger)
#add_subdirectory(Streamout2)
#add_subdirectory(Analysis2)
#add_subdirectory(Trivent2)
