

# add the binary tree to the search path for include files
include_directories("${PROJECT_INCLUDE_DIR}")
add_subdirectory(Streamout)
add_subdirectory(LCIOOutputProcessor)
add_subdirectory(Progress)
#add_subdirectory(TriventBIF)
add_subdirectory(Trivent)
#add_subdirectory(SpillStudy)
add_subdirectory(IJKfiller)
add_subdirectory(XYZfiller)
#add_subdirectory(Clusterisation)
add_subdirectory(BifHelper)
add_subdirectory(TimeSelecter)
#add_subdirectory(Analysis2)
#add_subdirectory(Trivent2)
