include_directories("${CMAKE_SOURCE_DIR}/build/include")
include_directories(include)
FILE (GLOB_RECURSE AEGIS_SRC_FILES ./source/*)
ADD_LIBRARY( AEGIS SHARED ${AEGIS_SRC_FILES} )
TARGET_LINK_LIBRARIES( AEGIS ${ROOT_LIBRARIES} Marlin) 
INSTALL( TARGETS AEGIS LIBRARY DESTINATION ${MARLINO_LIBRARY_OUTPUT_PATH} ARCHIVE DESTINATION ${MARLINO_LIBRARY_OUTPUT_PATH})
