include_directories("${CMAKE_SOURCE_DIR}/build/include")
include_directories(include)
FILE (GLOB_RECURSE BifHelper_SRC_FILES ./source/*)
ADD_LIBRARY( BifHelper SHARED ${BifHelper_SRC_FILES} )
TARGET_LINK_LIBRARIES( BifHelper ${ROOT_LIBRARIES} Marlin)
INSTALL( TARGETS BifHelper LIBRARY DESTINATION ${MARLINO_LIBRARY_OUTPUT_PATH})
